# insurance_rag

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EVAL_RESULTS.md  PLAN.md  README.md  app.py  pyproject.toml
docs/: NAIC_MANUAL_DOWNLOAD.md  adding_domains.md  data_sources.md  eval_questions.md  topic_definitions.md  troubleshooting.md
scripts/: download_all.py  eval_metrics.json  eval_metrics_baseline.json  eval_report.md  ingest_all.py  query.py  run_rag_eval.py  validate_and_eval.py
src/insurance_rag/: __init__.py  config.py
src/insurance_rag/domains/: __init__.py  base.py
src/insurance_rag/domains/auto/: __init__.py  download.py  extract.py  patterns.py  states.py
src/insurance_rag/download/: __init__.py  _utils.py  codes.py  iom.py  mcd.py
src/insurance_rag/index/: __init__.py  embed.py  store.py
src/insurance_rag/ingest/: __init__.py  chunk.py  cluster.py  extract.py  summarize.py
src/insurance_rag/query/: __init__.py  chain.py  expand.py  hybrid.py  retriever.py
src/medicare_rag/: config.py
src/medicare_rag/download/: _manifest.py  _utils.py  codes.py  iom.py  mcd.py
src/medicare_rag/index/: store.py
src/medicare_rag/ingest/: chunk.py  cluster.py  extract.py  summarize.py
src/medicare_rag/query/: chain.py  hybrid.py  retriever.py
tests/: conftest.py  test_app.py  test_auto_download.py  test_cluster.py  test_config.py  test_domains.py  test_download.py  test_enrich.py  test_hybrid.py  test_index.py  test_ingest.py  test_query.py  test_retriever_boost.py  test_search_validation.py  test_summarize.py
(+2 files in other folders)
