[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medicare-rag"
version = "0.1.0"
description = "Medicare RAG POC: RAG system for Medicare RCM questions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "httpx",
    "langchain-core",
    "langchain-text-splitters",
    "pdfplumber",
    "python-dotenv",
    "pytest",
    "unstructured",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
